feat: added funding